--- a/hu-luhu-release-notes.adoc
+++ b/hu-luhu-release-notes.adoc
@@ -20,7 +20,7 @@ For specific information about the operating system versions and updates that th
 == What's New in Linux Host Utilities 8.0
 The Linux Host Utilities 8.0 release contains the following new features and enhancements
 
-Linux Host Utilities 8.0 includes support for 64-bit speed QLogic and Emulex FC host bus adapter (HBA) adapters. 
+Linux Host Utilities 8.0 includes support for 64-bit speed QLogic and Emulex FC host bus adapters (HBA). 
 
 The following operating systems are now supported:
 
