--- a/hu-luhu-release-notes.adoc
+++ b/hu-luhu-release-notes.adoc
@@ -13,7 +13,7 @@ summary: Release Notes for Linux Host Utilities
 :imagesdir: ./media/
 
 [.lead]
-The release notes describe new features and enhancements, known issues and limitations, and important cautions for configuring and managing your specific host with your ONTAP storage system.
+The release notes describe new features, enhancements, known issues, limitations, and important cautions for configuring and managing your specific host with your ONTAP storage system.
 
 For specific information about the operating system versions and updates that the Host Utilities support, see the link:https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^].
 
