Edits post IE review

--- a/hu-luhu-80.adoc
+++ b/hu-luhu-80.adoc
@@ -70,7 +70,7 @@ Updating / installing...
 +
 [NOTE]
 ====
-If you are using an Ubuntu host OS, you need to manually link to the HBA library:
+If you are using an Ubuntu host OS, you need to manually link it to the HBA library:
 
 [source, cli]
 ----
